--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,14 +5,24 @@ run '~/.tmux/plugins/tpm/tpm'
 
 # Options
 
-set -sg escape-time 10
+bind r source-file ~/.config/tmux/tmux.conf
+
+set -g mouse on
+set -sg escape-time 0
 set -g display-panes-time 2000
+set -g history-limit 10000
 
-set -g status-keys vi
-set-window-option -g mode-keys vi
-
+# Use 1 based indexing
 set -g base-index 1
 setw -g pane-base-index 1
+
+# Vi mode
+set -g status-keys vi
+setw -g mode-keys vi
+
+# Automatically set window title
+setw -g automatic-rename on
+set-option -g set-titles on
 
 # Key Bindings
 
