--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,6 +30,12 @@ unbind C-b
 set -g prefix C-space
 bind C-space send-prefix
 
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
+bind-key v split-window -h -c "#{pane_current_path}"
+bind-key h split-window -v -c "#{pane_current_path}"
+
 # Color Scheme
 
 set -g mode-style "fg=#7aa2f7,bg=#3b4261"
