--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,6 +36,12 @@ bind -n S-Right next-window
 bind-key v split-window -h -c "#{pane_current_path}"
 bind-key h split-window -v -c "#{pane_current_path}"
 
+set -g default-terminal "tmux-256color"
+set -as terminal-overrides ',xterm*:sitm=\E[3m'
+
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
+
 # Color Scheme
 
 set -g mode-style "fg=#7aa2f7,bg=#3b4261"
