--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,11 +36,11 @@ bind -n S-Right next-window
 bind-key v split-window -h -c "#{pane_current_path}"
 bind-key h split-window -v -c "#{pane_current_path}"
 
-set -g default-terminal "tmux-256color"
-set -as terminal-overrides ',xterm*:sitm=\E[3m'
-
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
+
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",tmux-256color:Tc"
 
 # Color Scheme
 
