--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,12 +5,13 @@ run '~/.tmux/plugins/tpm/tpm'
 
 # Options
 
-bind r source-file ~/.config/tmux/tmux.conf
-
 set -g mouse on
 set -sg escape-time 0
 set -g display-panes-time 2000
 set -g history-limit 10000
+
+set-option default-terminal "tmux-256color"
+set-option -a terminal-overrides ",*256col*:Tc"
 
 # Use 1 based indexing
 set -g base-index 1
@@ -21,6 +22,7 @@ set -g status-keys vi
 setw -g mode-keys vi
 
 # Automatically set window title
+
 setw -g automatic-rename on
 set-option -g set-titles on
 
@@ -36,11 +38,7 @@ bind -n S-Right next-window
 bind-key v split-window -h -c "#{pane_current_path}"
 bind-key h split-window -v -c "#{pane_current_path}"
 
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
-
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",tmux-256color:Tc"
+bind r source-file ~/.config/tmux/tmux.conf
 
 # Color Scheme
 
